--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/dotenv": "^4.1"
+        "symfony/dotenv": "^4.1",
+        "ext-xml": "*"
     },
     "autoload": {
         "psr-4": {"App\\": "src/"}
